force-app/main/default/objects/sma__MALayer__c/sma__MALayer__c.object-meta.xml
<CustomObject>
    <label>MapAnything Layer</label>
    <nameField>
        <label>Layer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Layers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>