force-app/main/default/objects/sma__MALayer__c/fields/sma__ArcGISWebMapC2C__c.field-meta.xml
<CustomField>
    <fullName>sma__ArcGISWebMapC2C__c</fullName>
    <label>ArcGIS WebMap Click2Create</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>