force-app/main/default/objects/sma__MALayer__c/fields/sma__EmailOnAggregationSuccess__c.field-meta.xml
<CustomField>
    <fullName>sma__EmailOnAggregationSuccess__c</fullName>
    <label>Email On Aggregation Success</label>
    <type>Email</type>
</CustomField>