force-app/main/default/objects/sma__MALayer__c/fields/sma__Folder__c.field-meta.xml
<CustomField>
    <fullName>sma__Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MapAnything Folder</label>
    <referenceTo>sma__MAFolder__c</referenceTo>
    <relationshipLabel>MapAnything Layers</relationshipLabel>
    <relationshipName>MapAnything_Layers</relationshipName>
    <type>Lookup</type>
</CustomField>