force-app/main/default/objects/sma__MALayer__c/fields/sma__Options__c.field-meta.xml
<CustomField>
    <fullName>sma__Options__c</fullName>
    <inlineHelpText>Used to store the layer&apos;s options in a JSON format.</inlineHelpText>
    <label>Options</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>