force-app/main/default/objects/sma__MALayer__c/listViews/sma__ArcGIS_Layers.listView-meta.xml
<ListView>
    <fullName>sma__ArcGIS_Layers</fullName>
    <columns>NAME</columns>
    <columns>sma__Folder__c</columns>
    <columns>sma__Description__c</columns>
    <columns>sma__Options__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sma__Type__c</field>
        <operation>equals</operation>
        <value>ArcGIS Online</value>
    </filters>
    <label>ArcGIS Layers</label>
    <language>en_US</language>
</ListView>